--- a/package.json
+++ b/package.json
@@ -1,13 +1,30 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@react-native-picker/picker": "^2.2.1",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
+    "email-validator": "^2.0.4",
     "expo": "^44.0.0",
+    "expo-linear-gradient": "^11.0.2",
+    "firebase": "^9.6.2",
+    "formik": "^2.2.9",
+    "modal": "^1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-animatable": "^1.3.3",
+    "react-native-dropdown-picker": "^5.3.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.6.1",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "0.17.1",
+    "react-spinners": "^0.11.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@emotion/babel-plugin": "^11.7.2"
   },
   "scripts": {
     "start": "expo start",
