--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "email-validator": "^2.0.4",
     "expo": "^44.0.0",
     "expo-linear-gradient": "^11.0.2",
-    "firebase": "^9.6.2",
+    "firebase": "9.6.11",
     "formik": "^2.2.9",
     "modal": "^1.2.0",
     "react": "17.0.1",
@@ -15,8 +15,10 @@
     "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-dropdown-picker": "^5.3.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.6.1",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-spinners": "^0.11.0",
